[project]
name = "canmatrix_webapp"
version = "0.1.0"
description = "streamlit webapp for canmatrix python package"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <=3.13"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "canmatrix", "streamlit", "webapp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "canmatrix[arxml,fibex,kcd,xls,xlsx]",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/canmatrix_webapp"
repository = "https://github.com/chaitu-ycr/canmatrix_webapp"
documentation = "https://chaitu-ycr.github.io/canmatrix_webapp/"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
